--- a/src/partials/header.ejs
+++ b/src/partials/header.ejs
@@ -28,7 +28,7 @@
     <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="../">Home</a> |
-        <a href="../updates/">Updates</a> |
+        <a href="../blog/">Blog</a> |
         <a href="../projects">Projects</a> |
         <a href="../contact">Contact</a> |
         <a href="../about">About</a>
