--- a/src/partials/nav.ejs
+++ b/src/partials/nav.ejs
@@ -6,31 +6,31 @@
 </div>
 
 <div class="lighterBackground">
+
+
   <p class="sideBarTitle">Support Me! <br /><small>and blokz by extension</small></p>
   <span class="sideBarText">
-    No Bitcoin wallet? No way to get into crypto? No problem!! sign up with services below using these referral links, where we both
- get something cool.
+    No Bitcoin wallet? No way to get into crypto? No problem!! sign up with services below using these referral links,
+    where we both
+    get something cool.
   </span>
   <span class="sideBarText">
-
-    <p><strong>Coinbase</strong> makes it dead simple to get started with crypto. If you don't currently use Coinbase, sign up and we'll both get $10/ free with your first $100/ transaction. 
-      They also have a crypto earn program, where you can earn about $45 for free by watching some short videos to learn more about various cryptocurrencies.<!-- find out more here: --></p>
-
+    <p><strong>Coinbase</strong> makes it dead simple to get started with crypto. If you don't currently use Coinbase,
+      sign up and we'll both get $10/ free with your first $100/ transaction.
+      They also have a crypto earn program, where you can earn about $45 for free by watching some short videos to learn
+      more about various cryptocurrencies.
+      <!-- find out more here: -->
+    </p>
     <p><a href="https://www.coinbase.com/join/forake_z">Join coinbase</a></p>
-
-    
-     
     <p>
-    <strong>Cashapp</strong> has a referral program where you get $5 when you sign-up and make your first $5/ transfer to someone (feel free to toss $blokzio $5 as a thank you!),
-    it's similar to venmo, but let's you buy stocks as well as has an integrated bitcoin wallet, check it out here:</p>
-
-
+      <strong>Cashapp</strong> has a referral program where you get $5 when you sign-up and make your first $5/ transfer
+      to someone (feel free to toss $blokzio $5 as a thank you!),
+      it's similar to venmo, but let's you buy stocks as well as has an integrated bitcoin wallet, check it out here:
+    </p>
     <p><a href="https://cash.app/app/JJWBBZT">Join cashapp</a><br />CashApp: $blokzio</p>
-
-
     <p>Let's chat:</p>
-
     <p><a href="https://discord.gg/CgE3Sgr">blokz Discord</a></p>
 
-   
+
+    
 </div>
